scss/base/_sils.scss
@import '../vendor/foundation/_settings.scss';
@import '../vendor/foundation/components/_buttons.scss';
@import '../vendor/foundation/components/_forms.scss';
@import '../vendor/foundation/components/_labels.scss';
@import '../vendor/foundation/components/_tabs.scss';
//@import '../vendor/foundation/components/tabs';

//hide drupal breadcrumbs
.breadcrumbs {
    display: none;
}

//
//Classes used by SILS Search Results
//

.totalMatches {
    @include grid-columns(12,12,12);
}

//container for and elements of  each rendered search result
.searchResultRow {
    @include grid-row();
}

.itemCoverArt {
    @include grid-columns(4,2,2);
    margin: 0 auto;
}

.itemCoverArtDetail {
    @include grid-columns(4,4,4);
}

._record_link > h4 {
    color: $primary-color;
    margin-bottom: -1px;
}

.formatIcon {
    @include label;
}

//for <p> tag used to put hold button on new line when no
//summary is rendered
.itemDataSpacer {
    padding-top: 20px;
}

.itemSummary {
    @include grid-columns(8,10,10);
    float: right !important;
}

.itemSummaryDetail {
    @include grid-columns(8,8,8);
}


//Buttons
.holdButton {
    @include button;
}


.searchButton {
    @include prefix-postfix-base();
    @include postfix();
    @include button;
    width: 115px;
    margin-bottom: 1em;
    margin-top: 1em;
    line-height: 0.5 !important;
}

.sort_links {
    @include inline-list;
    display: none;
}

.resultauthor {
    margin-bottom: 3px;
    padding-bottom: 1px;
}

.resulttext {
    padding-top: 10px;
    margin-bottom: 0px;
}

.placeHolderIcon {
    font-size: 4rem;
    position: absolute;
    z-index: -1;
    text-align: center;
    padding-left: 4%;
}


//styles for suggested title scroller on item detail view
.sils_suggested_title {
    padding: 15px;
}

.sils_suggested_thumb {
    height: 90%;
}

.sils_suggested_info {
    padding-top: 5px;
    height: 150px;
    width: 170px;
}

//
//styles for syndetics
//

.syn_title {
    font-size: 1.5rem;
    padding: 4px;
}

//hide the terms for each blob that comes back
.syn_terms {
    display: none;
}

.syn_copyright {
    display: none;
}


//
//Styles for Bloodhound  Location Search Twitter-Typeahead
//
.twitter-typeahead {
    width: 100%;
}

.tt-query,
.tt-hint {
    /*width: 396px;
    height: 30px;
    padding: 8px 12px;
    font-size: 24px;
    line-height: 30px;*/
    border: 2px solid #ccc;
    border-radius: 8px;
    outline: none;
}

.tt-input {
    width: 100%;
}

.tt-query {
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.tt-hint {
    color: #999
}

.tt-dropdown-menu {
    width: 100%;
    margin-top: 0px;
    padding: 4px 0;
    background-color: #fff;
    border: 1px solid #ccc;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 8px;
    box-shadow: 0 5px 10px rgba(0,0,0,.2);
}

//.tt-dropdown-menu {
 //   @include dropdown-container();
  //  li { @include dropdown-style; }
//}


.tt-suggestion {
    padding: 3px 20px;
    font-size: 18px;
    line-height: 24px;
}

.tt-suggestion.tt-cursor { /* UPDATE: newer versions use .tt-suggestion.tt-cursor */
    color: #fff;
    background-color: $secondary-color;

}

.tt-suggestion p {
    margin: 0;
}

